# mining-site-analysis

./: .gitignore  INSIGHTS.md  README.md  THRESHOLDS.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: site_telemetry.csv
output/: insights.json  report.txt
src/: data_generator.py
src/analyzers/: __init__.py  base.py  business_impact.py  cooling.py  hardware_risk.py  optimization.py  peer_comparison.py  performance.py
tests/: test_analyzers.py
